# phone-link-cross

./: .gitattributes  .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
doc/: QUICKSTART.md  README.md  libimobiledevice-overview.md
doc/examples/: libimobiledevice-best-practices.md  libimobiledevice-examples.md  qt-libimobiledevice-example.md  qt-mirror-config.md
doc/imobiledevice/: API-REFERENCE.md  FUNCTION-GUIDE.md  使用文档.md  通讯录功能说明.md
doc/scripts/: install-qt-unix.sh  install-qt-windows.bat  install_qt.py
phone-linkc/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  deviceinfo.cpp  deviceinfo.h  devicemanager.cpp  devicemanager.h  libimobiledevice_dynamic.cpp  libimobiledevice_dynamic.h  main.cpp  mainwindow.cpp  mainwindow.h
phone-linkc/assets/images/: README.md
phone-linkc/assets/images/screenshots/: README.md
phone-linkc/scripts/: README.md  check-deps.py  check-deps.sh  install-deps.bat  install-deps.py  install-deps.sh
phone-linkc/scripts/download/v1.4.0/: libplist-2.7.0.tar.bz2
phone-linkc/src/: main.cpp
phone-linkc/src/core/app/: appmanager.cpp  appmanager.h
phone-linkc/src/core/contact/: contactmanager.cpp  contactmanager.h
phone-linkc/src/core/device/: deviceinfo.cpp  deviceinfo.h  devicemanager.cpp  devicemanager.h
phone-linkc/src/core/file/: filemanager.cpp  filemanager.h
phone-linkc/src/core/photo/: photomanager.cpp  photomanager.h
phone-linkc/src/platform/: afc_dynamic.h  instproxy_dynamic.h  libimobiledevice_dynamic.cpp  libimobiledevice_dynamic.h  lockdown_dynamic.h  mobilebackup2_dynamic.h  mobilesync_dynamic.h  plist_dynamic.h
phone-linkc/src/ui/: apppage.cpp  apppage.h  apppage.ui  contactpage.cpp  contactpage.h  contactpage.ui  debugwindow.cpp  debugwindow.ui  deviceconnectdialog.cpp  deviceconnectdialog.h  deviceconnectdialog.ui  filepage.cpp  filepage.h  filepage.ui  flowlayout.cpp  flowlayout.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  photopage.cpp  photopage.h  photopage.ui
